fixed responsive issue with sushi box on mobile view

--- a/mod2_solution/css/style.css
+++ b/mod2_solution/css/style.css
@@ -84,4 +84,8 @@ p{
   margin-bottom: 20px;
 }
 
+
+#bottom {
+  width: 98%;
+}
    }
